Lo and behold, after days of trying various things, the simplest bug (changing the title dynamically) was finally squashed with a single, simple line of jQuery.  Taking some time away to ignore it (and heal) apparently did some good.  Anyway, while we're all here, I'd like to tell you all a story.  It's called "War and Peace" by Leo Tolstoy.  Want to hear it?  Here it goes....  Well, Prince, so Genoa and Lucca are now just family estates of the Buonapartes. But I warn you, if you don't tell me that this means war, if you still try to defend the infamies and horrors perpetrated by that Antichrist--I really believe he is Antichrist--I will have nothing more to do with you ....

--- a/css/userinfo.css
+++ b/css/userinfo.css
@@ -48,7 +48,7 @@ p.small-text{
 #user-stats {
     position: absolute;
     left: 17em;
-    top: 2em;
+    top: 0em;
     width: auto;
 }
 #user-avatar {
@@ -110,7 +110,7 @@ p.bottom {
 
 .button-row {
     float: right;
-    padding: 20px 5px 10px    
+    padding: 20px 130px 10px 20px
 }
 .button-row span {
     margin: 5px; }
